--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -8,9 +8,7 @@
         <a href="#" class="homepage-hero__link">Water Sanitation Research and Development, India</a>
       </h1>
       <p class="homepage-hero__text">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
-      <div class="homepage-hero__more-link">
-        <a href="#" class="button button--secondary button--outline">Read More<span class="sr-only"> of "Water Sanitation Research and Development, India"</span></a>
-      </div>
+      <a href="#" class="homepage-hero__more-link">Read More<span class="sr-only"> of "Water Sanitation Research and Development, India"</span></a>
     </div>
   </section>
 </article>
