--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -2,7 +2,7 @@
   <figure class="homepage-hero__media">
     {% include 'partials/img.twig' with { name: 'homepage_hero' } %}
   </figure>
-  <section class="homepage-hero__content" aria-labelledby="midd-homepage-hero-title">
+  <section class="homepage-hero__content{% if align == 'top' %} homepage-hero__content--align-top{% endif %}" aria-labelledby="midd-homepage-hero-title">
     <div class="homepage-hero__body">
       <h1 class="homepage-hero__title">
         <a href="#" class="homepage-hero__link">Water Sanitation Research and Development, India</a>
