--- a/src/templates/partials/events-table.twig
+++ b/src/templates/partials/events-table.twig
@@ -1,6 +1,6 @@
 <h2 class="mb-4 mt-5">Tuesday, May 22, 2018</h2>
 
-<table class="table table--no-mobile-headers">
+<table class="table table--no-mobile-headers table--fixed">
   <thead>
     <tr>
       <th>Date</th>
