set table column width on medium and up

--- a/src/templates/partials/events-table.twig
+++ b/src/templates/partials/events-table.twig
@@ -5,7 +5,7 @@
     <tr>
       <th>Date</th>
       <th>Time</th>
-      <th class="w-lg-40">Event</th>
+      <th class="w-md-40">Event</th>
       <th>Location</th>
     </tr>
   </thead>
