remove unused margin option from section-title mixin

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -23,14 +23,13 @@
   left: $left;
 }
 
-@mixin section-title($margin-bottom: $section-title-margin-bottom) {
+@mixin section-title() {
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: $font-weight-medium;
   font-family: $font-family-sans-serif;
   font-size: 14px;
   line-height: 20px;
-  margin-bottom: $margin-bottom;
 }
 
 @mixin break-words {
