--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -17,8 +17,7 @@
 }
 
 .section__title {
-  // TODO: need to not apply margin instead of reseting it to 0
-  @include section-title(0);
+  @include section-title();
 }
 
 .section__link {
