add space between section title and cta link and fix underline wrap
fixes #152

--- a/src/templates/paragraphs/related-events.twig
+++ b/src/templates/paragraphs/related-events.twig
@@ -1,6 +1,6 @@
 {% embed 'partials/section.twig' with {
-  title: 'Related Events',
-  moreLinkText: 'View all',
+  title: 'Mixtape Exchange Audio Editing and Mixing Workshop',
+  moreLinkText: 'Mixtape Exchange Audio Editing and Mixing Workshop',
   moreLinkHref: '#',
   labelledby: 'midd-related-events'
 } %}
