--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -21,12 +21,10 @@
 }
 
 .section__link {
-  display: inline-block;
-  font-weight: $font-weight-medium;
   margin-top: 1rem;
-  @include link-border();
 
   @include media(md) {
     margin-top: 0;
+    margin-left: 1rem;
   }
 }
