--- a/src/scss/components/_homepage-hero.scss
+++ b/src/scss/components/_homepage-hero.scss
@@ -53,12 +53,14 @@
 }
 
 .homepage-hero__content--align-top {
-  align-items: flex-start;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(black, 0.8),
-    transparent 50%
-  );
+  @include media(md) {
+    align-items: flex-start;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(black, 0.8),
+      transparent 50%
+    );
+  }
 }
 
 .homepage-hero__body {
