create audio component
- split transcript to own partial file for reuse in video and audio
- add panopto variant of audio with responsive iframe

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 // components
 @import 'components/accordion';
 @import 'components/alert';
+@import 'components/audio';
 @import 'components/breadcrumb';
 @import 'components/button';
 @import 'components/callout-contacts';
@@ -95,6 +96,7 @@
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
 @import 'components/tags';
+@import 'components/transcript';
 @import 'components/teaser';
 @import 'components/text';
 @import 'components/two-col-text';
