--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -161,6 +161,10 @@
 
   {% include 'paragraphs/text.twig' %}
 
+  {% include 'paragraphs/audio.twig' %}
+
+  {% include 'paragraphs/text.twig' %}
+
   {% include 'paragraphs/image.twig' with { right: true } %}
 
   {% include 'paragraphs/text.twig' %}
