--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -15,27 +15,9 @@
   </div>
   <figcaption class="video__body">
     <h3 class="video__title">Practical Skills for Positive Change</h3>
-    <div class="typography">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra aliquet lacus a tristique. Suspendisse commodo pulvinar nisi vel laoreet. Pellentesque id hendrerit velit, vitae consectetur libero.</p>
-    </div>
+    <p class="video__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra aliquet lacus a tristique. Suspendisse commodo pulvinar nisi vel laoreet. Pellentesque id hendrerit velit, vitae consectetur libero.</p>
     {% if transcript %}
-      <a href="#midd-video-{{id}}" class="video__transcript-button" data-toggle-target=".js-video-transcript-{{id}}" aria-label="Toggle transcript" aria-expanded="false">
-          Transcript
-
-        <svg class="video__transcript-icon video__transcript-icon--close icon icon--sm">
-          <use xlink:href="#icon-arrow-up" />
-        </svg>
-
-        <svg class="video__transcript-icon video__transcript-icon--open icon icon--sm">
-          <use xlink:href="#icon-arrow-down" />
-        </svg>
-
-      </a>
-      <div class="video__transcript typography js-video-transcript-{{id}}" id="midd-video-{{id}}">
-        {% for i in 0..3 %}
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, quo error nesciunt unde magni, vitae ea in vero mollitia porro beatae a temporibus iure excepturi aspernatur dolores iste, dignissimos aut?</p>
-        {% endfor %}
-      </div>
+      {% include '../partials/transcript.twig'  with { id: 'video-1' } %}
     {% endif %}
   </figcaption>
 </figure>
