remove bootstrap dependency

--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -16,65 +16,13 @@
   }
 }
 
-[class^='col-'] {
-  @include make-col-ready();
-}
+@include make-grid-columns();
 
-.flex-first {
-  order: -1;
-}
-
-.flex-last {
-  order: 1;
-}
-
-// TODO: this is a very specific util for pulling the content out of a .col-md-11.col-md-push-1.
+// TODO: this is a very specific util for pulling the content out of a .col-md-11.offset-md-1.
 // Need to come up with a flexible way of achieving this and/or a more meaningful class name.
 .grid-expand {
   @include media(md) {
     margin-left: -20%;
     margin-right: -60%;
-  }
-}
-
-@mixin order($size) {
-  .flex-#{$size}-first {
-    order: -1;
-  }
-  .flex-#{$size}-last {
-    order: 1;
-  }
-}
-
-@mixin grid($size, $columns: $grid-columns) {
-  @for $index from 1 through $columns {
-    .col-#{$size}-#{$index} {
-      @include make-col($index);
-    }
-  }
-}
-
-@mixin push($size, $columns: $grid-columns) {
-  @for $index from 1 through $columns {
-    .col-#{$size}-push-#{$index} {
-      @include make-col-push($index);
-    }
-  }
-}
-
-@mixin pull($size, $columns: $grid-columns) {
-  @for $index from 1 through $columns {
-    .col-#{$size}-pull-#{$index} {
-      @include make-col-pull($index);
-    }
-  }
-}
-
-@each $name, $size in $grid-breakpoints {
-  @include media($name) {
-    @include grid($name);
-    @include push($name);
-    @include pull($name);
-    @include order($name);
   }
 }
