--- a/src/templates/partials/hero-form.twig
+++ b/src/templates/partials/hero-form.twig
@@ -5,7 +5,7 @@
   <div class="hero-form__content">
     <div class="container">
       <div class="row">
-        <div class="col-md-push-1 col-md-10 col-lg-6">
+        <div class="offset-md-1 col-md-10 col-lg-6">
           <p class="hero-form__text">We’re sorry, we seem to have lost this page, but let’s see if we can find it by the site search below.</p>
           <form action="">
             <div class="input-group">
