--- a/src/templates/partials/page-image-full.twig
+++ b/src/templates/partials/page-image-full.twig
@@ -3,7 +3,7 @@
     {% include 'partials/img.twig' with { name: 'top_level' } %}
     <div class="container">
       <div class="row">
-        <div class="col-md-push-1 col-md-9">
+        <div class="offset-md-1 col-md-9">
           <figcaption class="media__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. (Photo: John Doe)</figcaption>
         </div>
       </div>
