--- a/src/templates/partials/profile-explorer.twig
+++ b/src/templates/partials/profile-explorer.twig
@@ -2,7 +2,7 @@
   <div class="profile-explorer__controls">
     <div class="container">
       <div class="row">
-        <div class="col-md-push-1 col-md-7">
+        <div class="offset-md-1 col-md-7">
           <form action="">
             <div class="profile-explorer__form-group">
               <label for="" class="form__label profile-explorer__label">Explore Faculty by</label>
@@ -18,7 +18,7 @@
   <div class="profile-explorer__results">
     <div class="container">
       <div class="row">
-        <div class="col-md-push-1 col-md-11">
+        <div class="offset-md-1 col-md-11">
           <ol class="list list--lg">
             {% for i in 0..3 %}
               <li class="list__item">
