--- a/src/templates/t02-area-of-focus.twig
+++ b/src/templates/t02-area-of-focus.twig
@@ -13,7 +13,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
         {% include 'partials/lead.twig' %}
 
         {% include 'paragraphs/text.twig' %}
@@ -41,7 +41,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
         {% include 'paragraphs/related-stories.twig' %}
       </div>
     </div>
@@ -59,7 +59,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
         {% include 'paragraphs/related-events.twig' with {
           image_sizes: image_sizes
         } %}
