--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-push-1 col-md-7">
+        <div class="offset-md-1 col-md-7">
           <header class="event-detail__header" aria-labelledby="midd-event-label">
             <div class="event-detail__meta">
               <p class="event-detail__datetime">
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="col-md-push-1 col-md-3">
+        <div class="offset-md-1 col-md-3">
           {% embed 'partials/section.twig' with {
             title: 'Speakers',
             class: 'section--aside'
