--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -18,7 +18,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-push-1 col-md-7">
+          <div class="offset-md-1 col-md-7">
 
             <section class="section">
               <p class="lead my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
