--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,7 +4,7 @@ $screen-lg: 1200px;
 $screen-xl: 1440px; // TODO: do we need this? There's no col-xl-* or media(xl) usage
 
 // need to remove this somehow
-$grid-container-width: 1440px;
+$container-max-width: 1440px;
 
 // variable names based on bootstrap v4 grid variables
 $grid-columns: 12;
