--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,24 +2,19 @@
 @import 'core/functions';
 @import 'core/variables';
 @import 'core/mixins';
+@import 'core/grid-framework';
+@import 'core/grid';
 
 // vendor
 @import '../../node_modules/normalize.css/normalize';
-@import '../../node_modules/bootstrap/scss/mixins/breakpoints';
-@import '../../node_modules/bootstrap/scss/mixins/grid';
-@import '../../node_modules/bootstrap/scss/mixins/screen-reader';
-@import '../../node_modules/bootstrap/scss/mixins/clearfix';
-@import '../../node_modules/bootstrap/scss/utilities/clearfix';
-@import '../../node_modules/bootstrap/scss/utilities/screenreaders';
-
 @import '../../node_modules/swiper/dist/css/swiper';
 
 // base
 @import 'base/global';
 @import 'base/typography';
 @import 'base/table';
-@import 'base/grid';
 @import 'base/keyframes';
+@import 'base/grid';
 
 // components
 @import 'components/accordion';
@@ -107,7 +102,9 @@
 @import 'utils/display';
 @import 'utils/float';
 @import 'utils/font';
+@import 'utils/order';
 @import 'utils/spacing';
+@import 'utils/screenreaders';
 @import 'utils/text';
 @import 'utils/toggler';
 
@@ -120,9 +117,6 @@
 }
 
 // TODO: need to change frontend to use this class or figure out admin panel only styles
-.visually-hidden {
-  @include sr-only;
-}
 
 .profile-listing-title {
   margin-top: $component-margin-bottom;
