--- a/src/templates/partials/page-header.twig
+++ b/src/templates/partials/page-header.twig
@@ -1,7 +1,7 @@
 <header class="page-header" aria-labelledby="midd-page-header-label">
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-11">
+      <div class="offset-md-1 col-md-11">
 
         <div class="row">
 
