--- a/src/templates/partials/page-hero.twig
+++ b/src/templates/partials/page-hero.twig
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-push-1 col-md-11">
+      <div class="offset-md-1 col-md-11">
 
         <div class="row">
           <div class="page-hero__media">
