--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -13,12 +13,12 @@
   <article class="profile-detail">
     <div class="container">
       <div class="row">
-        <div class="col-md-push-1 col-md-11">
+        <div class="offset-md-1 col-md-11">
 
           <p class="lead">Program Chair, Master of Public Administration and International Policy and Development</p>
 
           <div class="row">
-            <div class="col-md-4 flex-md-last">
+            <div class="col-md-4 order-md-last">
               <div class="row">
 
                 <div class="col-sm-6 col-md-12 mb-3">
@@ -50,7 +50,7 @@
 
               </div>
             </div>
-            <div class="col-md-8 flex-md-first">
+            <div class="col-md-8 order-md-first">
 
               <div class="text typography">
                 <p>Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proinauctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
