--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -12,7 +12,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-7">
+      <div class="offset-md-1 col-md-7">
 
         <header class="story-detail__header">
           <p class="story-detail__author">by <a href="#" class="link-border">Michael Green</a></p>
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
 
         <div class="page__image">
           <figure class="media">
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-push-1 col-md-7">
+      <div class="offset-md-1 col-md-7">
 
         {% include 'paragraphs/text.twig' %}
 
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
 
         {% include 'paragraphs/related-stories.twig' %}
 
