--- a/src/templates/t16-info-for-students.twig
+++ b/src/templates/t16-info-for-students.twig
@@ -13,7 +13,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-push-1 col-md-9">
+      <div class="offset-md-1 col-md-9">
 
         {% include 'partials/callout-contacts.twig' %}
 
