--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -14,6 +14,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+select::-ms-expand {
+  display: none;
+}
+
 textarea {
   resize: vertical;
 }
