create pardot layout

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -1,4 +1,5 @@
 <footer class="site-footer">
+  {% if not pardot %}
   <div class="container">
     <div class="row">
       <div class="col-lg-3 border-lg-r border-secondary-dark">
@@ -38,6 +39,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
 
   <div class="secondary-footer">
     <div class="container">
