--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -47,7 +47,7 @@
         <div class="col-lg-3">
 
           <div class="secondary-footer__brand">
-            <img src="images/middlebury-logo-white.svg" alt="Middlebury" width="195" height="71">
+            <img src="{{imagesDir ? imagesDir : 'images'}}/middlebury-logo-white.svg" alt="Middlebury" width="195" height="71">
           </div>
 
         </div>
