--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -39,7 +39,8 @@ $spacers: map-merge(
     2: ($spacer * 0.5),
     3: $spacer,
     4: ($spacer * 1.5),
-    5: ($spacer * 3)
+    5: ($spacer * 3),
+    6: ($spacer * 6)
   ),
   $spacers
 );
