--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -64,10 +64,10 @@
       </div>
     </div>
 
-    {# {% include 'partials/projects.twig' %} #}
-
   </div>
 
   {% include 'partials/program-spotlight.twig' %}
+
+  {% include 'partials/profile-spotlight.twig' %}
 
 {% endblock %}
