--- a/src/templates/partials/profile-spotlight.twig
+++ b/src/templates/partials/profile-spotlight.twig
@@ -1,4 +1,4 @@
-<section class="container mb-6 mt-6" aria-labelledby="midd-profile-spotlight-label-1">
+<section class="mb-6 mt-6" aria-labelledby="midd-profile-spotlight-label-1">
   <h2 class="h1 mb-5" id="midd-profile-spotlight-label-1">In Their Own Words</h2>
   <p class="mb-5">Students who choose the Middlebury Schools Abroad thrive on the chance to immerse themselves in an authentic and rewarding experience. They gain incredible language proficiency—but also discover a deeper understanding of themselves and the world.</p>
 
