add container around profile spotlight to add horizontal padding

--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -68,6 +68,8 @@
 
   {% include 'partials/program-spotlight.twig' %}
 
-  {% include 'partials/profile-spotlight.twig' %}
+  <div class="container">
+    {% include 'partials/profile-spotlight.twig' %}
+  </div>
 
 {% endblock %}
