--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -31,14 +31,19 @@
   font-family: $font-family-base;
   font-size: $input-font-size;
   line-height: $input-line-height;
-  background-color: $input-bg;
+  background-color: white;
   color: $input-color;
   padding: $input-padding-y $input-padding-x;
   border-radius: $input-border-radius;
 
   &:focus {
-    background-color: $input-focus-bg;
+    // background-color: $input-focus-bg;
+    border-color: $black;
   }
+}
+
+.form__help-text {
+  font-size: 14px;
 }
 
 // sizes
