set input bg back to variable and change color var level

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -38,7 +38,7 @@
   font-family: $font-family-base;
   font-size: $input-font-size;
   line-height: $input-line-height;
-  background-color: white;
+  background-color: $input-bg;
   color: $input-color;
   padding: $input-padding-y $input-padding-x;
   border-radius: $input-border-radius;
