--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -218,7 +218,7 @@ $input-padding-x-sm: $input-btn-padding-x-sm;
 $input-padding-y-lg: $input-btn-padding-y-lg;
 $input-padding-x-lg: $input-btn-padding-x-lg;
 
-$input-bg: $warm-gray;
+$input-bg: $white;
 $input-disabled-bg: $warm-gray;
 
 $input-color: $black;
