Make the country field required. For #170.

--- a/src/templates/partials/pardot-form-handler.twig
+++ b/src/templates/partials/pardot-form-handler.twig
@@ -38,6 +38,7 @@
     name: 'country',
     label: 'Country',
     inputClass: 'js-pardot-country-select',
+    required: true,
     options: [
       {value: "", selected:true, text: "- None -"},
       {value: "US", text: "United States"},
