add button paragraph
for https://github.com/middlebury/drupal8/issues/711

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -157,6 +157,8 @@
 
   {% include 'paragraphs/faq.twig' %}
 
+  {% include 'paragraphs/button.twig' %}
+
   {# G3 image paragraph #}
 
   {% include 'paragraphs/text.twig' %}
