--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -71,6 +71,18 @@
     background-color: $brand-primary;
     color: $white;
   }
+
+  &.button--outline {
+    background-color: transparent;
+    color: $brand-primary;
+    border-color: $brand-primary;
+
+    &:hover,
+    &:focus {
+      background: $brand-primary;
+      color: $white;
+    }
+  }
 }
 
 // TODO: change to button--light
