remove extra div wrapper from button

--- a/src/templates/paragraphs/button.twig
+++ b/src/templates/paragraphs/button.twig
@@ -1,3 +1,1 @@
-<div class="paragraph--button">
-  <a href="" class="button button--primary button--outline">button</a>
-</div>
+<a href="" class="paragraph--button button button--primary button--outline">button</a>
