--- a/src/scss/_paragraphs.scss
+++ b/src/scss/_paragraphs.scss
@@ -1,5 +1,8 @@
 .paragraph--button {
   margin-bottom: 3rem;
+  position: relative;
+  top: -3rem;
+  
   @include media(md) {
     margin-bottom: 4rem;
   }
