add chevron down icon

--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -24,6 +24,10 @@
 			<title>icon-check</title><path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"></path>
 		</symbol>
 	
+		<symbol id="icon-chevron-down" viewBox="0 0 24 24">
+			<path d="M4.079 7H1l11 10L23 7h-3.079L12 14.201 4.079 7z" fill-rule="nonzero"></path>
+		</symbol>
+	
 		<symbol id="icon-close" viewBox="0 0 16 16">
 			<title>icon-close</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z"></path>
 		</symbol>
