--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,9 @@
 @import 'components/carousel';
 @import 'components/chart';
 // @import 'components/drawer';
+@import 'components/degree-finder';
+@import 'components/degree-popup';
+@import 'components/dropdown';
 @import 'components/event-detail';
 @import 'components/event-teaser';
 @import 'components/event-card';
