--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -84,16 +84,13 @@
   grid-area: menu;
   justify-self: flex-end;
 
-  .site-header.is-toggled & {
-    text-align: left;
+  @include media(sm) {
+    padding-left: 4px;
+    padding-right: 4px;
   }
 
   @include media(md) {
     min-height: 70px;
-    // text-align: center;
-    // position: absolute;
-    // left: 50%;
-    // transform: translateX(-50%);
 
     .home & {
       visibility: hidden;
@@ -104,8 +101,24 @@
 .site-header__degrees {
   grid-area: degrees;
   padding-top: 1rem;
+
+  .site-header.is-toggled & {
+    display: none;
+  }
+
   @include media(sm) {
     padding-top: 0;
+  }
+
+  @include media(md) {
+    margin-right: -0.5rem;
+    margin-left: -0.5rem;
+    padding-top: 3rem;
+  }
+
+  @include media(lg) {
+    margin-right: -1rem;
+    margin-left: -1rem;
   }
 }
 
@@ -143,17 +156,11 @@
 .site-header__nav {
   position: relative;
   z-index: 2;
-  // overflow: hidden;
-  // height: 100vh;
-  // padding-left: 30px;
-  // padding-right: 30px;
 
   @include media(md) {
     order: 1;
     flex: 1;
-    // height: 100%;
     overflow: visible;
     position: static;
-    // margin-bottom: 80px;
   }
 }
