--- a/src/scss/components/_degree-popup.scss
+++ b/src/scss/components/_degree-popup.scss
@@ -57,7 +57,7 @@
 
 .degree-popup__content {
   position: relative;
-  z-index: 100;
+  z-index: 2;
 
   @include media(sm) {
     min-width: 300px;
@@ -73,7 +73,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
+  z-index: 100; // set high to fix ie11 bug
   background: none;
   border: 0;
   display: inline-block;
@@ -88,5 +88,5 @@
   height: 100%;
   background: rgba(black, 0.75);
   animation: fadeIn 0.2s;
-  z-index: 99;
+  z-index: 1;
 }
