use background none

--- a/src/scss/components/_degree-popup.scss
+++ b/src/scss/components/_degree-popup.scss
@@ -24,7 +24,7 @@
   border: 1px solid $white;
   line-height: 1;
   text-align: center;
-  background: 0;
+  background: none;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.1em;
