--- a/src/templates/partials/dropdown.twig
+++ b/src/templates/partials/dropdown.twig
@@ -1,17 +1,12 @@
 <div class="dropdown" data-dropdown>
-  <button
-    class="dropdown__button"
-    aria-haspopup="true"
-    aria-expanded="false"
-    data-dropdown-button
-  >
+  <button class="dropdown__button" data-dropdown-button>
     {{label}}
     {% include 'partials/icon.twig' with { name: 'chevron-down', class: 'dropdown__icon' } %}
   </button>
   <ul class="dropdown__list" data-dropdown-menu>
     {% for item in items %}
       <li class="dropdown__item">
-        <a href="{{item.href}}" class="dropdown__link">
+        <a href="{{item.href}}" class="dropdown__link" data-dropdown-item>
           {{item.label}}
         </a>
       </li>
