reduce dropdown item font size

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -68,6 +68,7 @@
   display: block;
   padding: 0.5rem 1rem;
   font-weight: $font-weight-medium;
+  font-size: 14px;
 
   &:hover {
     background: $gray-lighter;
