set focus style on dropdown item to gray background only

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -70,7 +70,9 @@
   font-weight: $font-weight-medium;
   font-size: 14px;
 
+  &:focus,
   &:hover {
     background: $gray-lighter;
+    outline: 0;
   }
 }
