Use a sr-only span rather than the title attribute to include text in the footer social links. For #177.

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -19,9 +19,9 @@
               <li class="social-links__item">
                 <a href="{{item.href}}" class="social-links__link">
                   {% include 'partials/icon.twig' with {
-                    'name': 'item.slug',
-                    'title': 'item.text'
+                    'name': 'item.slug'
                   } %}
+                  <span class="sr-only">{{item.text}}</span>
                 </a>
               </li>
             {% endfor %}
