remove single quotes around item.slug so icon renders

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -19,7 +19,7 @@
               <li class="social-links__item">
                 <a href="{{item.href}}" class="social-links__link">
                   {% include 'partials/icon.twig' with {
-                    'name': 'item.slug'
+                    'name': item.slug
                   } %}
                   <span class="sr-only">{{item.text}}</span>
                 </a>
