--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,14 +90,17 @@
 @import 'components/slideshow';
 @import 'components/social-links';
 @import 'components/speaker';
+@import 'components/spotlight';
+@import 'components/stats';
 @import 'components/story-aside';
 @import 'components/story-detail';
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
 @import 'components/tags';
-@import 'components/transcript';
 @import 'components/teaser';
 @import 'components/text';
+@import 'components/themed-panel';
+@import 'components/transcript';
 @import 'components/two-col-text';
 @import 'components/video';
 
